some fixes in user experience

--- a/app/views/auth/login.html
+++ b/app/views/auth/login.html
@@ -2,6 +2,17 @@
 
 {% extends '../partials/base.html' %}
 
+{% block styles %}
+	<style>
+		.am-Header-new-right {
+			display: none;
+		}
+		.footer {
+			display: none;
+		}
+	</style>
+{% endblock %}
+
 {% block elements %}
 	<div class="am-register">
 		<div class="am-register-box">
