--- a/app/views/user/product/buy.html
+++ b/app/views/user/product/buy.html
@@ -1,5 +1,21 @@
 {% extends '../../partials/base.html' %}
 
+{% block styles %}
+	<style>
+		.am-Header-new-right {
+			display: none;
+		}
+		.footer {
+			display: none;
+		}
+		.am-Header-new-left a {
+			pointer-events: none;
+			cursor: default;
+		}
+		
+	</style>
+{% endblock %}
+
 {% block elements %}
 
 	<div class="am-welcome am-checkout">
