--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -28,14 +28,8 @@
 
 
 	{% if env === 'production' %}
-	<!-- start Mixpanel -->
-	<script type="text/javascript">(function(e,a){if(!a.__SV){var b=window;try{var c,l,i,j=b.location,g=j.hash;c=function(a,b){return(l=a.match(RegExp(b+"=([^&]*)")))?l[1]:null};g&&c(g,"state")&&(i=JSON.parse(decodeURIComponent(c(g,"state"))),"mpeditor"===i.action&&(b.sessionStorage.setItem("_mpcehash",g),history.replaceState(i.desiredHash||"",e.title,j.pathname+j.search)))}catch(m){}var k,h;window.mixpanel=a;a._i=[];a.init=function(b,c,f){function e(b,a){var c=a.split(".");2==c.length&&(b=b[c[0]],a=c[1]);b[a]=function(){b.push([a].concat(Array.prototype.slice.call(arguments,
-0)))}}var d=a;"undefined"!==typeof f?d=a[f]=[]:f="mixpanel";d.people=d.people||[];d.toString=function(b){var a="mixpanel";"mixpanel"!==f&&(a+="."+f);b||(a+=" (stub)");return a};d.people.toString=function(){return d.toString(1)+".people (stub)"};k="disable time_event track track_pageview track_links track_forms register register_once alias unregister identify name_tag set_config reset people.set people.set_once people.increment people.append people.union people.track_charge people.clear_charges people.delete_user".split(" ");
-for(h=0;h<k.length;h++)e(d,k[h]);a._i.push([b,c,f])};a.__SV=1.2;b=e.createElement("script");b.type="text/javascript";b.async=!0;b.src="undefined"!==typeof MIXPANEL_CUSTOM_LIB_URL?MIXPANEL_CUSTOM_LIB_URL:"file:"===e.location.protocol&&"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js".match(/^\/\//)?"https://cdn.mxpnl.com/libs/mixpanel-2-latest.min.js":"//cdn.mxpnl.com/libs/mixpanel-2-latest.min.js";c=e.getElementsByTagName("script")[0];c.parentNode.insertBefore(b,c)}})(document,window.mixpanel||[]);
-mixpanel.init("74985840e393343761c1e55c835a01e4");
-	</script>
-<!-- end Mixpanel -->
 
+	<!-- Google Analytics Code -->
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -45,13 +39,7 @@ mixpanel.init("74985840e393343761c1e55c835a01e4");
 	  ga('create', 'UA-70917306-1', 'auto');
 	  ga('send', 'pageview');	  
 	</script>
-	
-	<script type="text/javascript">
-	setTimeout(function(){var a=document.createElement("script");
-	var b=document.getElementsByTagName("script")[0];
-	a.src=document.location.protocol+"//script.crazyegg.com/pages/scripts/0052/6659.js?"+Math.floor(new Date().getTime()/3600000);
-	a.async=true;a.type="text/javascript";b.parentNode.insertBefore(a,b)}, 1);
-	</script>
+	<!-- End Google Analytics Code -->
 
 	<!-- Google Tag Manager -->
 	<noscript><iframe src="//www.googletagmanager.com/ns.html?id=GTM-KFM6ZZ"
@@ -62,6 +50,62 @@ mixpanel.init("74985840e393343761c1e55c835a01e4");
 	'//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 	})(window,document,'script','dataLayer','GTM-KFM6ZZ');</script>
 	<!-- End Google Tag Manager -->
+
+	<!-- Push Crew Code -->
+	<script type="text/javascript">
+    (function(p,u,s,h){
+        p._pcq=p._pcq||[];
+        p._pcq.push(['_currentTime',Date.now()]);
+        s=u.createElement('script');
+        s.type='text/javascript';
+        s.async=true;
+        s.src='https://cdn.pushcrew.com/js/2cb88974e306d74818482c00c260d210.js';
+        h=u.getElementsByTagName('script')[0];
+        h.parentNode.insertBefore(s,h);
+    })(window,document);
+	</script>
+	<!-- End Push Crew Code -->
+
+	<!-- Facebook Pixel Code -->
+	<script>
+	!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+	n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
+	n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
+	t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
+	document,'script','https://connect.facebook.net/en_US/fbevents.js');
+	fbq('init', '1546995582278131'); // Insert your pixel ID here.
+	fbq('track', 'PageView');
+	</script>
+	<noscript><img height="1" width="1" style="display:none"
+	src="https://www.facebook.com/tr?id=1546995582278131&ev=PageView&noscript=1"
+	/></noscript>
+	<!-- End Facebook Pixel Code -->
+
+	<!-- Start of Async Drift Code -->
+	<script>
+	!function() {
+	 var t;
+	 if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0, 
+	 t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
+	 t.factory = function(e) {
+	   return function() {
+	     var n;
+	     return n = Array.prototype.slice.call(arguments), n.unshift(e), t.push(n), t;
+	   };
+	 }, t.methods.forEach(function(e) {
+	   t[e] = t.factory(e);
+	 }), t.load = function(t) {
+	   var e, n, o, i;
+	   e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"), 
+	   o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js", 
+	   n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
+	 });
+	}();
+	drift.SNIPPET_VERSION = '0.3.1';
+	drift.load('dybbbnh3wb9u');
+	</script>
+	<!-- End of Async Drift Code -->
+
 	{% endif %}
 	
 	 <link href='https://fonts.googleapis.com/css?family=PT+Serif:400,400italic,700,700italic|Montserrat:400,700' rel='stylesheet' type='text/css'> 
@@ -93,56 +137,6 @@ mixpanel.init("74985840e393343761c1e55c835a01e4");
 			top: 0;
 		}
 	</style>
-	<!-- Start of artemanifiesto Zendesk Widget script -->
-<!-- <script>/*<![CDATA[*/window.zEmbed||function(e,t){var n,o,d,i,s,a=[],r=document.createElement("iframe");window.zEmbed=function(){a.push(arguments)},window.zE=window.zE||window.zEmbed,r.src="javascript:false",r.title="",r.role="presentation",(r.frameElement||r).style.cssText="display: none",d=document.getElementsByTagName("script"),d=d[d.length-1],d.parentNode.insertBefore(r,d),i=r.contentWindow,s=i.document;try{o=s}catch(c){n=document.domain,r.src='javascript:var d=document.open();d.domain="'+n+'";void(0);',o=s}o.open()._l=function(){var o=this.createElement("script");n&&(this.domain=n),o.id="js-iframe-async",o.src=e,this.t=+new Date,this.zendeskHost=t,this.zEQueue=a,this.body.appendChild(o)},o.write('<body onload="document._l();">'),o.close()}("https://assets.zendesk.com/embeddable_framework/main.js","artemanifiesto.zendesk.com");
-/*]]>*/</script> -->
-<!-- End of artemanifiesto Zendesk Widget script -->
-
-<!-- Start of Async Drift Code -->
-<script>
-!function() {
- var t;
- if (t = window.driftt = window.drift = window.driftt || [], !t.init) return t.invoked ? void (window.console && console.error && console.error("Drift snippet included twice.")) : (t.invoked = !0, 
- t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ], 
- t.factory = function(e) {
-   return function() {
-     var n;
-     return n = Array.prototype.slice.call(arguments), n.unshift(e), t.push(n), t;
-   };
- }, t.methods.forEach(function(e) {
-   t[e] = t.factory(e);
- }), t.load = function(t) {
-   var e, n, o, i;
-   e = 3e5, i = Math.ceil(new Date() / e) * e, o = document.createElement("script"), 
-   o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + i + "/" + t + ".js", 
-   n = document.getElementsByTagName("script")[0], n.parentNode.insertBefore(o, n);
- });
-}();
-drift.SNIPPET_VERSION = '0.3.1';
-drift.load('dybbbnh3wb9u');
-</script>
-<!-- End of Async Drift Code -->
-
-<script type=“text/javascript”>
-    window.heap=window.heap||[],heap.load=function(e,t){window.heap.appid=e,window.heap.config=t=t||{};var r=t.forceSSL||“https:“===document.location.protocol,a=document.createElement(“script”);a.type=“text/javascript”,a.async=!0,a.src=(r?“https:“:”http:“)+“//cdn.heapanalytics.com/js/heap-“+e+“.js”;var n=document.getElementsByTagName(“script”)[0];n.parentNode.insertBefore(a,n);for(var o=function(e){return function(){heap.push([e].concat(Array.prototype.slice.call(arguments,0)))}},p=[“addEventProperties”,“addUserProperties”,“clearEventProperties”,“identify”,“removeEventProperty”,“setEventProperties”,“track”,“unsetEventProperty”],c=0;c<p.length;c++)heap[p[c]]=o(p[c])};
-      heap.load(“4128146541”);
-</script>
-
-<!-- Facebook Pixel Code -->
-<script>
-!function(f,b,e,v,n,t,s){if(f.fbq)return;n=f.fbq=function(){n.callMethod?
-n.callMethod.apply(n,arguments):n.queue.push(arguments)};if(!f._fbq)f._fbq=n;
-n.push=n;n.loaded=!0;n.version='2.0';n.queue=[];t=b.createElement(e);t.async=!0;
-t.src=v;s=b.getElementsByTagName(e)[0];s.parentNode.insertBefore(t,s)}(window,
-document,'script','https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1546995582278131'); // Insert your pixel ID here.
-fbq('track', 'PageView');
-</script>
-<noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1546995582278131&ev=PageView&noscript=1"
-/></noscript>
-<!-- DO NOT MODIFY -->
-<!-- End Facebook Pixel Code -->
 
 </head>
 <body>
