add gonzalo to mail list

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1180,6 +1180,7 @@ white = #fff
 		margin-bottom: 3px;
 		margin-top: 10px;
 		text-align center
+		height 32px
 	&-subtitle
 		font-family: OpenSans !important;
 		color: #333333;
