--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1109,7 +1109,7 @@ white = #fff
 	position relative
 	max-width: 250px;
 	margin: auto;
-	padding 20px
+	padding 10px
 
 	&:hover
 		.product-card-zoom
@@ -1198,6 +1198,19 @@ white = #fff
 		display none
 		background-size cover
 		background-position center center
+
+@media (max-width: 450px)
+	.product-card
+		&-image
+			height 150px
+			max-width 150px
+		&-title
+			font-size 14px
+			height 28px
+		&-subtitle
+			font-size 11px
+		&-price
+			font-size 14px
 
 .featured
 	z-index: 1;
@@ -2970,13 +2983,7 @@ white = #fff
 	.grid-item
 		width 100%
 
-// @media (min-width: 300px)
-// 	.work-layout-discover
-// 		.grid-sizer
-// 		.grid-item
-// 			width 50%
-
-@media (min-width: 460px)
+@media (min-width: 300px)
 	.work-layout-discover
 		.grid-sizer
 		.grid-item
