change images in meta data

--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -19,11 +19,11 @@
 		<meta property="og:site" content="artemanifiesto.com" />
 		<meta property="og:title" content="Red social y tienda en línea de arte y diseño | Arte Manifiesto" />
 		<meta property="og:description" content="Crea tu portafolio, abre tu tienda y encuentra miles de productos con diseños únicos de Latinoamérica" />
-		<meta property="og:image" content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454618424/general/am-op-graph_eqzlok.jpg" />
+		<meta property="og:image" content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1494367584/general/03_copy_1.jpg" />
 		<meta property="og:url" content="http://artemanifiesto.com" />
 		<meta property="og:type" content="website" />
 		<meta name='twitter:card' content='summary_large_image' />
-		<meta name='twitter:image:src' content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1454618424/general/am-op-graph_eqzlok.jpg" />
+		<meta name='twitter:image:src' content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1494367584/general/03_copy_1.jpg" />
 		<meta name='twitter:site' content='@artemanifiesto' />
 		<meta name='twitter:url' content='http://artemanifiesto.com' />
 		<meta name='twitter:description' content='Crea tu portafolio, abre tu tienda y encuentra miles de productos con diseños únicos de Latinoamérica' />
@@ -31,7 +31,7 @@
 	{% endblock %}
 
 
-	{% if env !== 'production' %}
+	{% if env === 'production' %}
 
 	<!-- Google Analytics Code -->
 	<script>
