--- a/app/views/pages/products.html
+++ b/app/views/pages/products.html
@@ -11,11 +11,11 @@
 	<meta property="og:site" content="artemanifiesto.com" />
 	<meta property="og:title" content="Colecciona Art Prints, iphone cases, tazas y otros productos hechos por miles de artistas de toda Latinoamérica | Arte Manifiesto Market" />
 	<meta property="og:description" content="Encuentra miles de productos únicos con diseños de artistas de toda Lationamérica." />
-	<meta property="og:image" content="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516596/banner-principal_ilrnuk.jpg" />
+	<meta property="og:image" content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1494367567/general/03_copy.jpg" />
 	<meta property="og:url" content="http://artemanifiesto.com/market" />
 	<meta property="og:type" content="website" />
 	<meta name='twitter:card' content='summary_large_image' />
-	<meta name='twitter:image:src' content="http://res.cloudinary.com/arte-manifiesto/image/upload/q_auto,f_auto/v1475516596/banner-principal_ilrnuk.jpg" />
+	<meta name='twitter:image:src' content="http://res.cloudinary.com/arte-manifiesto/image/upload/v1494367567/general/03_copy.jpg" />
 	<meta name='twitter:site' content='@artemanifiesto' />
 	<meta name='twitter:url' content='http://artemanifiesto.com/market' />
 	<meta name='twitter:description' content='Encuentra miles de productos únicos con diseños de artistas de toda Lationamérica.' />
