--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -320,6 +320,7 @@
 			toMobile : function  () {
 				console.log('toMobile!!')
 				$('.am-NavigationMenu').css('display', 'none')
+				$('.body-inner').css('margin-top', '50px !important')
 				$('.js-menu-discover').removeClass('open')
 				openDiscoverMenu = false
 			}
