--- a/app/views/partials/elements/table-order-item.html
+++ b/app/views/partials/elements/table-order-item.html
@@ -6,6 +6,7 @@
     <td><%=data.direction%></td>
     <td><%=data.phone%></td>
     <td><%=data.email%></td>
+    <td><%=data.reference%></td>
     <td><%=dateToString(createdAt)%></td>
     <td><%=shipping%></td>
     <td><a class="btn btn-primary" href="/report/orders/order/<%=id%>">Actualizar</a></td>
