add reference code to orders in report

--- a/app/views/report/orders.html
+++ b/app/views/report/orders.html
@@ -52,6 +52,7 @@
         <th>direccion</th>
         <th>telefono</th>
         <th>email</th>
+        <th>codigo de referencia</th>
         <th>fecha de pago</th>
         <th>estado</th>
         <th></th>
