--- a/app/views/partials/elements/table-order-item.html
+++ b/app/views/partials/elements/table-order-item.html
@@ -2,11 +2,11 @@
   <tr>
     <td><img src="<%= addFilter(Product.photo, 'w_35') %>"></td>
     <td><a href="/user/<%=Product.User.username%>/product/<%=Product.nameSlugify%>"><%=Product.name%></a></td>
-    <td><a href="/user/<%=User.username%>"><%=data.name%></a></td>
+    <td><a href="/user/<%=User.username%>"><%=name%></a></td>
     <td><%=data.direction%></td>
     <td><%=data.phone%></td>
     <td><%=data.email%></td>
-    <td><%=data.reference%></td>
+    <td><%=reference%></td>
     <td><%=dateToString(createdAt)%></td>
     <td><%=shipping%></td>
     <td><a class="btn btn-primary" href="/report/orders/order/<%=id%>">Actualizar</a></td>
