fix header menus in responsive

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -748,13 +748,14 @@ white = #fff
 	position relative
 	overflow hidden
 	.left-mobile-menu
-		position absolute
+		position fixed
 		left 0
 		top 0
 		bottom 0
 		width 70%
 		background #333
 		padding 20px
+		margin-top 50px
 		box-sizing border-box
 		transform: translateX(-100%);
 		transition transform .3s
@@ -792,13 +793,14 @@ white = #fff
 				margin-left 5px
 
 	.right-mobile-menu
-		position absolute
+		position fixed
 		right 0
 		top 0
 		bottom 0
 		width 70%
 		background #333
 		padding 20px
+		margin-top 50px
 		box-sizing border-box
 		transform: translateX(100%);
 		transition transform .3s
