--- a/app/views/partials/elements/table-order-item.html
+++ b/app/views/partials/elements/table-order-item.html
@@ -2,7 +2,7 @@
   <tr>
     <td><img src="<%= addFilter(Product.photo, 'w_35') %>"></td>
     <td><a href="/user/<%=Product.User.username%>/product/<%=Product.nameSlugify%>"><%=Product.name%></a></td>
-    <td><a href="/user/<%=User.username%>"><%=name%></a></td>
+    <td><a href="/user/<%=User.username%>"><%=data.name%></a></td>
     <td><%=data.direction%></td>
     <td><%=data.phone%></td>
     <td><%=data.email%></td>
