make ads section in feed fixed

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4111,6 +4111,9 @@ white = #fff
 	display flex
 	flex-direction column
 	margin-top 20px
+	width 300px
+	&-fixed
+		position fixed
 	
 .feed
 	padding 20px 20px 40px 20px
