fix footer in feed

--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -4,6 +4,16 @@
 
 {% extends '../partials/base.html' %}
 
+{% block styles %}
+  <style>
+    .am-Footer{
+      position: absolute;
+      width: 100%;
+    }
+    
+  </style>
+{% endblock %}
+
 {% block elements %}
 
 	<a href="#" id="back-to-top" title="Back to top"><i class="fa fa-chevron-up"></i></a>
