--- a/app/views/user/product/index.html
+++ b/app/views/user/product/index.html
@@ -124,8 +124,8 @@
 					<div class="singleProduct-selects u-padding-bottom-30">
 						<label class="singleProduct-label">
 							<select class="singleProduct-select" name='model'>
-								{% if product.CategoryId == 87 ||  product.CategoryId == 88 %}
-									<option selected value="1">S</option>
+								{% if product.CategoryId == 74 ||  product.CategoryId == 88 %}
+									<option value="1">S</option>
 									<option value="2">M</option>
 									<option value="3">L</option>
 									<option value="4">XL</option>
