--- a/app/views/partials/base.html
+++ b/app/views/partials/base.html
@@ -190,16 +190,14 @@
 	<div class="body">
 		<div class="left-mobile-menu">
 			<table class="options u-margin-top-10">
-			{% if user %}
 				<tr>
 					<td></td>
-					<td><a href="/feed">INICIO</a></td>
+					<td><a href="/">INICIO</a></td>
 				</tr>
 				<tr>
 					<td></td>
 					<td><p></p></td>
 				</tr>
-			{% endif %}
 				<tr>
 					<td></td>
 					<td><a href="/works/category/all/page-1/?order=newest&featured=1">OBRAS</a></td>
