--- a/app/views/partials/header.html
+++ b/app/views/partials/header.html
@@ -15,9 +15,7 @@
 
 					<div class="am-Header-new-right">
 							<ul class="options">
-				              {% if user %}
-				                <a href="/feed" class="feed-menu">INICIO<span></span></a>
-				              {% endif %}
+				                <a href="/" class="feed-menu">INICIO<span></span></a>
 				              	<a href="/works/category/all/page-1/?order=newest&featured=1" class="works-menu">OBRAS<span></span></a>
 								<a href="/users/specialty/all/page-1/?order=newest&featured=1" class="users-menu">ARTISTAS<span></span></a>
 				              	<a href="/products/category/all/page-1/?order=newest&featured=1" class="collections-menu">MARKET<sup> NEW</sup><span></span></a>
