--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4125,12 +4125,18 @@ white = #fff
 		border-radius 4px
 		.title
 			text-align center
-			padding 20px
+			padding 20px 0
 			font-weight bold
-			letter-spacing 2px
+			letter-spacing 3.3px
 			font-size 18px
 			color charcoal-grey
 			font-family: 'Montserrat',sans-serif;
+		.icon
+			font-size 25px
+			float left
+			padding 17px
+			border-right 1px solid #e7e7e7
+
 		.user-info
 			display flex
 			flex-direction column
@@ -4178,8 +4184,39 @@ white = #fff
 						font-size 12px
 						color #838d8f
 						font-style italic
-
-
+	&-intro
+		display flex
+		&-text
+			font-family OpenSans
+			font-size 18px
+			color #333
+		&-container
+			padding-right 20px
+			padding-top 20px
+		&-image
+			padding 20px 15px
+			img
+				width 50px
+				min-width 50px
+		&-button
+			border 1px solid #979797
+			border-radius 4px
+			padding 8px
+			margin 25px 0
+			font-size 10px
+			font-weight bold
+			letter-spacing 2px
+			font-family montserrat
+			color #333
+			text-decoration none
+			transition 0.2s
+			&-container
+				margin 25px 0
+		&-button:hover
+			color #fff
+			border-color #40f
+			background-color #40f
+			
 	&-inner
 		max-width 540px
 		margin auto
