fix feed rework|

--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -4128,13 +4128,13 @@ white = #fff
 			padding 20px 0
 			font-weight bold
 			letter-spacing 3.3px
-			font-size 18px
+			font-size 16px
 			color charcoal-grey
 			font-family: 'Montserrat',sans-serif;
 		.icon
 			font-size 25px
 			float left
-			padding 17px
+			padding 16px
 			border-right 1px solid #e7e7e7
 
 		.user-info
@@ -4206,6 +4206,7 @@ white = #fff
 			font-size 10px
 			font-weight bold
 			letter-spacing 2px
+			cursor pointer
 			font-family montserrat
 			color #333
 			text-decoration none
