--- a/app/views/pages/feed.html
+++ b/app/views/pages/feed.html
@@ -79,7 +79,7 @@
 						<p class="feed-intro-text">Crea tu cuenta y personaliza tu experiencia.</p>
 					
 						<div class="feed-intro-button-container">
-							<a class="feed-intro-button">REGISTRARME</a>
+							<a id="register" class="feed-intro-button">REGISTRARME</a>
 						</div>
 					</div>
 				</div>
