--- a/app/styles/app.min.styl
+++ b/app/styles/app.min.styl
@@ -1391,26 +1391,86 @@ white = #fff
 .edit-collection
 	font-size 1.15em
 	position absolute
-	// top 15px
-	bottom 0
+	bottom 20px
 	right 20px
 	color white
 	cursor pointer
 	a
-		color #333
+		color #ffffff
+.collection-description
+	max-width 1180px
+	margin 20px auto
+	background-color rgba(156,156,156,0.14)
+	padding 30px 0
+	.title
+		max-width 820px
+		font-family 'Montserrat'
+		font-size 15px
+		font-weight bold
+		color #333333
+		margin 0 auto
+		padding 0 20px
+	.description
+		max-width 820px
+		font-family 'OpenSans'
+		font-size 14px
+		color #333333
+		margin 0 auto
+		padding 0 20px
 
-
-.single-collection-header
-	display flex
-	align-items center
-	justify-content center
-	img
-		width 50px
-		height 50px
-		border-radius 50%
-		margin-right 10px
-
-
+.single-collection
+	&-banner
+		position relative
+		background-size cover
+		background-position center center
+		overflow hidden
+		background rgba(0,0,0,0.15)
+		height 436px
+		max-width 1180px
+		margin 0 auto
+		&-img
+			position absolute
+			top 50%
+			left 50%
+			transform translate(-50%, -50%)
+			z-index -1
+			height 100%
+			max-width inherit
+	&-container
+		display flex
+		justify-content center
+		align-items center
+		height 100%
+	&-info
+		font-family 'Montserrat'
+		color #ffffff
+		.title
+			font-size 48px
+			font-weight bold
+			line-height 1.22
+			letter-spacing -1.8px
+			text-align center
+			text-shadow 0 2px 4px rgba(0,0,0,0.5)
+			max-width 620px
+			padding 0 20px
+		.author
+			display flex
+			justify-content center
+			align-items center
+			.name
+				font-weight bold
+				font-size 11px
+				letter-spacing 1.5px
+				color #ffffff
+			img
+				width 30px
+				height 30px
+				min-width 30px
+				border-radius 50%
+			p
+				font-family 'PT Serif'
+				font-size 14.9px
+				font-style italic
 .footer
 	padding 40px 0
 	&-logo
